--- a/views/student-dashboard.ejs
+++ b/views/student-dashboard.ejs
@@ -8,7 +8,8 @@
     <h1>Welcome <%= username %></h1> <!-- Display the username -->
     <nav>
         <ul>
-            <li><a href="">View Classes</a></li>
+            <li><a>Total Attendace: <%= totalAttendancePercentage %></a></li>
+            <li><a href="/students/student-classes">View Classes</a></li>
             <li><a href="/users/logout">Logout</a></li>
         </ul>
     </nav>
