incomplete tasks and percentages added

--- a/views/class-details.ejs
+++ b/views/class-details.ejs
@@ -66,5 +66,6 @@
         <textarea id="description" name="description" required></textarea>
         <button type="submit">Add Task</button>
     </form>
+    <button onclick="history.back()">Back to Classes</button>
 </body>
 </html>
