--- a/views/view-classes.ejs
+++ b/views/view-classes.ejs
@@ -34,5 +34,6 @@
         <% }) %>
     </ul>
     <button onclick="location.href='/classes/create'">Add New Class</button> <!-- Button to add a new class -->
+    <button onclick="location.href='/teachers/teacher-dashboard'">Back</button>
 </body>
 </html>
