--- a/views/student-incomplete-tasks.ejs
+++ b/views/student-incomplete-tasks.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Your Incomplete Tasks</h1>
-    <form action="/mark-tasks-complete" method="post">
+    <form action="/students/mark-tasks-complete" method="post">
         <ul>
             <% tasks.forEach(task => { %>
                 <li>
