--- a/views/create-class.ejs
+++ b/views/create-class.ejs
@@ -64,7 +64,7 @@
         }
     });
 
-    fetch('teachers/create', {
+    fetch('/teachers/create', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
