noficication percentage fixed

--- a/views/student-class-details.ejs
+++ b/views/student-class-details.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Class: <%= className %></h1>
-    <h2>Attendance Percentage: <%= totalAttendancePercentage %> %</h2>
+    <h2>Your Attendance Percentage: <%= totalAttendancePercentage %> %</h2>
     <h2>Tasks:</h2>
     <ul>
         <% tasks.forEach(function(task) { %>
