--- a/views/student-dashboard.ejs
+++ b/views/student-dashboard.ejs
@@ -52,6 +52,7 @@
             <li><a>Total Tasks Completed: <%= totalTaskCompletionPercentage %></a></li>
             <li><a href="/students/student-classes">View Classes</a></li>
             <li><a href="/students/student-incomplete-tasks">View Incomplete Tasks</a></li>
+            <li><a href="/students/student-notifications">View Notifications</a></li>
             <li><a href="/users/logout">Logout</a></li>
         </ul>
     </nav>
