incomplete tasks except mark as read

--- a/views/class-details.ejs
+++ b/views/class-details.ejs
@@ -69,6 +69,6 @@
     <form action="/teachers/manage-tasks/<%= classInfo._id %>" method="get">
         <button type="submit">Manage Tasks</button>
     </form>
-    <button onclick="history.back()">Back to Classes</button>
+    <a href="/teachers/view-classes">Back to Classes</a>
 </body>
 </html>
