--- a/views/manage-tasks.ejs
+++ b/views/manage-tasks.ejs
@@ -68,6 +68,7 @@
 
     
 
-    <button onclick="history.back()">Back to Classes</button>
+    <button onclick="window.location.href='/teachers/view-class/<%= classInfo._id %>'">Back to Class</button>
 </body>
+
 </html>
