--- a/views/edit-task.ejs
+++ b/views/edit-task.ejs
@@ -36,6 +36,6 @@
         <input type="hidden" name="classId" value="<%= task.class %>">
         <button type="submit">Update Task</button>
     </form>
-    <button onclick="history.back()">Back to Task Management</button>
+    <button onclick="window.location.href='/teachers/manage-tasks/<%= task.class %>'">Back to Task Management</button>
 </body>
 </html>
