--- a/views/teacher-dashboard.ejs
+++ b/views/teacher-dashboard.ejs
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="/teachers/view-classes">View Classes</a></li>
             <li><a href="/users/logout">Logout</a></li>
+            <li><a href="/teachers/settings">Settings</a></li>
         </ul>
     </nav>
 </body>
