--- a/views/student-dashboard.ejs
+++ b/views/student-dashboard.ejs
@@ -64,6 +64,7 @@
                 <a href="/students/student-notifications">View Notifications</a>
                 <span id="new-notifications"></span>
             </li>
+            <li><a href="/students/student-attendance-report">View Attendance Report</a></li>
             <li><a href="/students/settings">Settings</a></li>
             <li><a href="/users/logout">Logout</a></li>
         </ul>
