--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -1,24 +1,50 @@
-
-<style>
-    nav.navbar  {
-        
-        border-bottom: 1px solid #ccc; /* Adding a bottom border to create a dividing line */
-    }
-</style>
-<nav class="navbar">
-    <% if (userRole === 'teacher') { %>
+<div class="wrapper">
+    <div class="top_navbar">
+        <div class="hamburger">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+        </div>
+        <div class="top_menu">
+            <div class="logo">
+                logo
+            </div>
+            <ul>
+                <li><a href="#">
+                    <i class="fas fa-search"></i>
+                </a></li>
+                <li><a href="#">
+                    <i class="fas fa-bell"></i>
+                </a></li>
+                <li><a href="#">
+                    <i class="fas fa-user"></i>
+                </a></li>
+            </ul>
+        </div>
+    </div>
+    
+    <div class="sidebar">
         <ul>
-            <li><a href="/teachers/dashboard">Dashboard</a></li>
-            <li><a href="/teachers/classes">Classes</a></li>
-            <li><a href="/teachers/settings">Settings</a></li>
-            <li><a href="/users/logout">Logout</a></li>
+            <li><a href="#">
+                <span class="icon"><i class="fas fa-book"></i></span>
+                <span class="title">Books</span>
+            </a></li>
+            <li><a href="#">
+                <span class="icon"><i class="fas fa-file-video"></i></span>
+                <span class="title">Movies</span>
+            </a></li>
+            <li><a href="#">
+                <span class="icon"><i class="fas fa-volleyball-ball"></i></span>
+                <span class="title">Sports</span>
+            </a></li>
+            <li><a href="#" class="active">
+                <span class="icon"><i class="fas fa-blog"></i></span>
+                <span class="title">Blogs</span>
+            </a></li>
+            <li><a href="#">
+                <span class="icon"><i class="fas fa-leaf"></i></span>
+                <span class="title">Nature</span>
+            </a></li>
         </ul>
-    <% } else if (userRole === 'student') { %>
-        <ul>
-            <li><a href="/students/student-dashboard">Dashboard</a></li>
-            <li><a href="/students/student-classes">Classes</a></li>
-            <li><a href="/students/settings">Settings</a></li>
-            <li><a href="/users/logout">Logout</a></li>
-        </ul>
-    <% } %>
-</nav>
+    </div>
+</div>
